2021-07-28 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/r3ka/abs.s,
	  device/lib/r3ka/atomic_flag_test_and_set.s,
	  device/lib/r3ka/divsigned.s,
	  device/lib/r3ka/divunsigned.s,
	  device/lib/r3ka/modsigned.s,
	  device/lib/r3ka/modunsigned.s,
	  device/lib/r3ka/mulchar.s,
	  device/lib/r3ka/memmove.s,
	  device/lib/r3ka/setjmp.s,
	  device/lib/r3ka/strcpy.s,
	  device/include/string.h:
	  Fix library functions for new calling convention.

2021-07-28 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/ports/rrz80/spec.mk,
	  support/regression/ports/ucz180/spec.mk,
	  support/regression/ports/ucz80-nmos/spec.mk,
	  support/regression/ports/ucz80-resiy/spec.mk,
	  support/regression/ports/ucz80n/spec.mk:
	  Do not use --profile in regression testing, since it conflicts with register arguments.
	* device/lib/z180/mul.s,
	  device/lib/z180/mulchar.s:
	  Fix z180 multiplication support routines for new calling convention.
	* device/lib/_memset.c,
	  device/lib/z180/memmove.s,
	  device/lib/z80/memmove.s,
	  device/lib/z80n/memmove.s,
	  device/lib/z180/memcpy.s,
	  device/lib/z80/memcpy.s,
	  device/lib/z80n/memcpy.s:
	  Fix library functions for new calling convention.
	* support/regression/tests/z80n-push-nn.c:
	  Port test to new calling convention.

2021-07-28 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z180/abs.s,
	  device/lib/z180/divmixed.s,
	  device/lib/z180/divsigned.s,
	  device/lib/z180/divunsigned.s,
	  device/lib/z180/modmixed.s,
	  device/lib/z180/modsigned.s,
	  device/lib/z180/modunsigned.s,
	  device/lib/z180/mulchar.s,
	  device/lib/z180/setjmp.s,
	  device/lib/z180/strcpy.s,
	  device/lib/z180/strlen.s,
	  device/lib/z80/divmixed.s,
	  device/lib/z80/modmixed.s,
	  device/lib/z80/mulchar.s,
	  device/lib/z80n/abs.s,
	  device/lib/z80n/divmixed.s,
	  device/lib/z80n/divsigned.s,
	  device/lib/z80n/divunsigned.s,
	  device/lib/z80n/modmixed.s,
	  device/lib/z80n/modsigned.s,
	  device/lib/z80n/modunsigned.s,